source/PSeIntParser.py
# Generated from PSeInt.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PSeIntParser ( Parser ):

    grammarFileName = "PSeInt.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Proceso'", "'Algoritmo'", "'FinProceso'", 
                     "'FinAlgoritmo'", "'Funcion'", "'<-'", "'('", "')'", 
                     "'FinFuncion'", "'SubProceso'", "'SubAlgoritmo'", "'FinSubProceso'", 
                     "'FinSubAlgoritmo'", "','", "'Definir'", "'Como'", 
                     "';'", "'Entero'", "'Real'", "'Logico'", "'Caracter'", 
                     "'Cadena'", "'Leer'", "'Escribir'", "'Mostrar'", "'Si'", 
                     "'Entonces'", "'Sino'", "'FinSi'", "'Mientras'", "'Hacer'", 
                     "'FinMientras'", "'Para'", "'Hasta'", "'Con'", "'Paso'", 
                     "'FinPara'", "'Repetir'", "'Que'", "'^'", "'*'", "'/'", 
                     "'MOD'", "'+'", "'-'", "'>'", "'<'", "'>='", "'<='", 
                     "'='", "'<>'", "'NO'", "'~'", "'Y'", "'&'", "'O'", 
                     "'|'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "BOOLEANO", "NUMERO", "IDENTIFICADOR", 
                      "CADENA", "WS", "COMENTARIO" ]

    RULE_prog = 0
    RULE_principal = 1
    RULE_encabezado = 2
    RULE_bloque = 3
    RULE_fin = 4
    RULE_subprograma = 5
    RULE_funcion = 6
    RULE_subproceso = 7
    RULE_parametros = 8
    RULE_argumentos = 9
    RULE_sentencia = 10
    RULE_declaracion = 11
    RULE_tipo = 12
    RULE_asignacion = 13
    RULE_lectura = 14
    RULE_escritura = 15
    RULE_listaEscritura = 16
    RULE_llamada = 17
    RULE_condicional = 18
    RULE_mientras = 19
    RULE_para = 20
    RULE_repetir = 21
    RULE_expr = 22

    ruleNames =  [ "prog", "principal", "encabezado", "bloque", "fin", "subprograma", 
                   "funcion", "subproceso", "parametros", "argumentos", 
                   "sentencia", "declaracion", "tipo", "asignacion", "lectura", 
                   "escritura", "listaEscritura", "llamada", "condicional", 
                   "mientras", "para", "repetir", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    BOOLEANO=58
    NUMERO=59
    IDENTIFICADOR=60
    CADENA=61
    WS=62
    COMENTARIO=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def principal(self):
            return self.getTypedRuleContext(PSeIntParser.PrincipalContext,0)


        def EOF(self):
            return self.getToken(PSeIntParser.EOF, 0)

        def subprograma(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PSeIntParser.SubprogramaContext)
            else:
                return self.getTypedRuleContext(PSeIntParser.SubprogramaContext,i)


        def getRuleIndex(self):
            return PSeIntParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PSeIntParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3104) != 0):
                self.state = 46
                self.subprograma()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.principal()
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3104) != 0):
                self.state = 53
                self.subprograma()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self.match(PSeIntParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrincipalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def encabezado(self):
            return self.getTypedRuleContext(PSeIntParser.EncabezadoContext,0)


        def bloque(self):
            return self.getTypedRuleContext(PSeIntParser.BloqueContext,0)


        def fin(self):
            return self.getTypedRuleContext(PSeIntParser.FinContext,0)


        def getRuleIndex(self):
            return PSeIntParser.RULE_principal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrincipal" ):
                listener.enterPrincipal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrincipal" ):
                listener.exitPrincipal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrincipal" ):
                return visitor.visitPrincipal(self)
            else:
                return visitor.visitChildren(self)




    def principal(self):

        localctx = PSeIntParser.PrincipalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_principal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.encabezado()
            self.state = 62
            self.bloque()
            self.state = 63
            self.fin()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EncabezadoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(PSeIntParser.IDENTIFICADOR, 0)

        def getRuleIndex(self):
            return PSeIntParser.RULE_encabezado

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEncabezado" ):
                listener.enterEncabezado(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEncabezado" ):
                listener.exitEncabezado(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEncabezado" ):
                return visitor.visitEncabezado(self)
            else:
                return visitor.visitChildren(self)




    def encabezado(self):

        localctx = PSeIntParser.EncabezadoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_encabezado)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 66
            self.match(PSeIntParser.IDENTIFICADOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PSeIntParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(PSeIntParser.SentenciaContext,i)


        def getRuleIndex(self):
            return PSeIntParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = PSeIntParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1152921789274292224) != 0):
                self.state = 68
                self.sentencia()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FinContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PSeIntParser.RULE_fin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFin" ):
                listener.enterFin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFin" ):
                listener.exitFin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFin" ):
                return visitor.visitFin(self)
            else:
                return visitor.visitChildren(self)




    def fin(self):

        localctx = PSeIntParser.FinContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fin)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            _la = self._input.LA(1)
            if not(_la==3 or _la==4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubprogramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcion(self):
            return self.getTypedRuleContext(PSeIntParser.FuncionContext,0)


        def subproceso(self):
            return self.getTypedRuleContext(PSeIntParser.SubprocesoContext,0)


        def getRuleIndex(self):
            return PSeIntParser.RULE_subprograma

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubprograma" ):
                listener.enterSubprograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubprograma" ):
                listener.exitSubprograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubprograma" ):
                return visitor.visitSubprograma(self)
            else:
                return visitor.visitChildren(self)




    def subprograma(self):

        localctx = PSeIntParser.SubprogramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_subprograma)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.funcion()
                pass
            elif token in [10, 11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.subproceso()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self, i:int=None):
            if i is None:
                return self.getTokens(PSeIntParser.IDENTIFICADOR)
            else:
                return self.getToken(PSeIntParser.IDENTIFICADOR, i)

        def bloque(self):
            return self.getTypedRuleContext(PSeIntParser.BloqueContext,0)


        def parametros(self):
            return self.getTypedRuleContext(PSeIntParser.ParametrosContext,0)


        def getRuleIndex(self):
            return PSeIntParser.RULE_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncion" ):
                listener.enterFuncion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncion" ):
                listener.exitFuncion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncion" ):
                return visitor.visitFuncion(self)
            else:
                return visitor.visitChildren(self)




    def funcion(self):

        localctx = PSeIntParser.FuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(PSeIntParser.T__4)
            self.state = 81
            self.match(PSeIntParser.IDENTIFICADOR)
            self.state = 82
            self.match(PSeIntParser.T__5)
            self.state = 83
            self.match(PSeIntParser.IDENTIFICADOR)
            self.state = 84
            self.match(PSeIntParser.T__6)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==60:
                self.state = 85
                self.parametros()


            self.state = 88
            self.match(PSeIntParser.T__7)
            self.state = 89
            self.bloque()
            self.state = 90
            self.match(PSeIntParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubprocesoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(PSeIntParser.IDENTIFICADOR, 0)

        def bloque(self):
            return self.getTypedRuleContext(PSeIntParser.BloqueContext,0)


        def parametros(self):
            return self.getTypedRuleContext(PSeIntParser.ParametrosContext,0)


        def getRuleIndex(self):
            return PSeIntParser.RULE_subproceso

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubproceso" ):
                listener.enterSubproceso(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubproceso" ):
                listener.exitSubproceso(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubproceso" ):
                return visitor.visitSubproceso(self)
            else:
                return visitor.visitChildren(self)




    def subproceso(self):

        localctx = PSeIntParser.SubprocesoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_subproceso)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not(_la==10 or _la==11):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 93
            self.match(PSeIntParser.IDENTIFICADOR)
            self.state = 94
            self.match(PSeIntParser.T__6)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==60:
                self.state = 95
                self.parametros()


            self.state = 98
            self.match(PSeIntParser.T__7)
            self.state = 99
            self.bloque()
            self.state = 100
            _la = self._input.LA(1)
            if not(_la==12 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self, i:int=None):
            if i is None:
                return self.getTokens(PSeIntParser.IDENTIFICADOR)
            else:
                return self.getToken(PSeIntParser.IDENTIFICADOR, i)

        def getRuleIndex(self):
            return PSeIntParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametros" ):
                return visitor.visitParametros(self)
            else:
                return visitor.visitChildren(self)




    def parametros(self):

        localctx = PSeIntParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(PSeIntParser.IDENTIFICADOR)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 103
                self.match(PSeIntParser.T__13)
                self.state = 104
                self.match(PSeIntParser.IDENTIFICADOR)
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PSeIntParser.ExprContext)
            else:
                return self.getTypedRuleContext(PSeIntParser.ExprContext,i)


        def getRuleIndex(self):
            return PSeIntParser.RULE_argumentos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentos" ):
                listener.enterArgumentos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentos" ):
                listener.exitArgumentos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumentos" ):
                return visitor.visitArgumentos(self)
            else:
                return visitor.visitChildren(self)




    def argumentos(self):

        localctx = PSeIntParser.ArgumentosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_argumentos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.expr(0)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 111
                self.match(PSeIntParser.T__13)
                self.state = 112
                self.expr(0)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(PSeIntParser.DeclaracionContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(PSeIntParser.AsignacionContext,0)


        def lectura(self):
            return self.getTypedRuleContext(PSeIntParser.LecturaContext,0)


        def escritura(self):
            return self.getTypedRuleContext(PSeIntParser.EscrituraContext,0)


        def condicional(self):
            return self.getTypedRuleContext(PSeIntParser.CondicionalContext,0)


        def mientras(self):
            return self.getTypedRuleContext(PSeIntParser.MientrasContext,0)


        def para(self):
            return self.getTypedRuleContext(PSeIntParser.ParaContext,0)


        def repetir(self):
            return self.getTypedRuleContext(PSeIntParser.RepetirContext,0)


        def llamada(self):
            return self.getTypedRuleContext(PSeIntParser.LlamadaContext,0)


        def getRuleIndex(self):
            return PSeIntParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = PSeIntParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_sentencia)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.declaracion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.asignacion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.lectura()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 121
                self.escritura()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 122
                self.condicional()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 123
                self.mientras()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 124
                self.para()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 125
                self.repetir()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 126
                self.llamada()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self, i:int=None):
            if i is None:
                return self.getTokens(PSeIntParser.IDENTIFICADOR)
            else:
                return self.getToken(PSeIntParser.IDENTIFICADOR, i)

        def tipo(self):
            return self.getTypedRuleContext(PSeIntParser.TipoContext,0)


        def getRuleIndex(self):
            return PSeIntParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = PSeIntParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_declaracion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(PSeIntParser.T__14)
            self.state = 130
            self.match(PSeIntParser.IDENTIFICADOR)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 131
                self.match(PSeIntParser.T__13)
                self.state = 132
                self.match(PSeIntParser.IDENTIFICADOR)
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(PSeIntParser.T__15)
            self.state = 139
            self.tipo()
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 140
                self.match(PSeIntParser.T__16)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PSeIntParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = PSeIntParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8126464) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'
